--- a/layouts/_default/aboutme.html
+++ b/layouts/_default/aboutme.html
@@ -1,13 +1,9 @@
 {{- define "main" }}
 
-<script
-  src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js">
+<script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js">
 </script>
 
-<link
-  rel="stylesheet"
-  href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css"
-/>
+<link rel="stylesheet" href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css" />
 
 <article class="post-single">
   <header class="post-header">
@@ -29,7 +25,8 @@
     </div>
     {{- end }}
   </header>
-  {{- $isHidden := .Params.cover.hidden | default .Site.Params.cover.hiddenInSingle | default .Site.Params.cover.hidden }}
+  {{- $isHidden := .Params.cover.hidden | default .Site.Params.cover.hiddenInSingle | default .Site.Params.cover.hidden
+  }}
   {{- partial "cover.html" (dict "cxt" . "IsHome" false "isHidden" $isHidden) }}
   {{- if (.Param "ShowToc") }}
   {{- partial "toc.html" . }}
@@ -38,7 +35,7 @@
     {{- partial "anchored_headings.html" .Content -}}
   </div>
   <div>
-    <small>Last modified: {{ now.Format "January 2, 2006"}}</small>
+    <small>Last modified: {{ dateFormat "2006-01-02" .Lastmod }}</small>
   </div>
 
   <footer class="post-footer">
